fixed the footer gap

--- a/styles/index.css
+++ b/styles/index.css
@@ -226,12 +226,12 @@ h1{
     background-size: cover;
     width: 100%;
     height: 185px;
+    border: 1px solid transparent;
 }
 
 .footerWrapper{
     width: 400px;
     margin: 30px;
-    font-size: 12px;
 }
 
 .footerWrapper > * {
@@ -261,8 +261,3 @@ h1{
     color: #7a594a;
 }
 
-.imgFrame {
-    height: auto;
-    padding: 0;
-    
-}
